# tf-convex-quad-iou

./: .gitignore  BUILD  LICENSE  MANIFEST.in  README.md  WORKSPACE  configure.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
build_deps/: build_pip_pkg.sh
src/tf_convex_polygon_iou/: __init__.py  _tf_implementation.py  test_benchmarks.py  test_numpy.py  test_tensorflow.py
src/tf_convex_polygon_iou_atuleu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tf_quad_iou/: __init__.py  _data.py  _numpy_implementation.py  _tf_implementation.py  test_numpy.py  test_tensorflow.py
tf_convex_quad_iou/: BUILD  __init__.py  iou_matrix_ops.py  tf_convex_quad_iou.bzl
tf_convex_quad_iou/custom_ops/iou/: BUILD
tf_convex_quad_iou/custom_ops/iou/cc/kernels/: iou_matrix_ops.cc  iou_matrix_ops.h  iou_matrix_ops_gpu.cu.cc
tf_convex_quad_iou/custom_ops/iou/cc/ops/: iou_matrix_ops.cc
tf_convex_quad_iou/tests/: iou_matrix_test.py  run_all_test.py
