[metadata]
name = tf-convex-polygon-iou-atuleu
version = 0.0.1
author = Alexandre Tuleu
author_email = alexandre.tuleu.2005@polytechnique.org
description = IoU computation for convex polygons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atuleu/tf-convex-polygon-iou
project_urls =
    Bug Tracker = https://github.com/atuleu/tf-convex-polygon-iou
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow >= 2.6.0

[options.packages.find]
where = src
